Implemented specific buttons to insert wall and modify weight in grid

--- a/src/PathfindingVisualizer/Node/Node.css
+++ b/src/PathfindingVisualizer/Node/Node.css
@@ -50,6 +50,10 @@
   background-color: rgb(12, 53, 71);
 }
 
+.node-weight {
+  background-color: rgb(32, 64, 245);
+}
+
 .node-shortest-path {
   animation-name: shortestPath;
   animation-duration: 1.5s;
